--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
         <ul class="nav-links">
           <li><a href="portfolio">portfolio</a></li>
-          <li><a href="About"></a>About</li>
+          <li><a href="About">About</a></li>
           <li><a href="Contact">Contact</a></li>
           <li class="envelope"><i class="fas fa-envelope-square"></i></li>
         </ul>
