update html and css files

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-  <nav class="destop-version hidden">
+  <nav class="destop-version">
       <a href="#" class="my-logo">Alexander</a>
     <nav class="hamburger-menu">
       <a href="#"><i class="fa fa-bars"></i></a>
     </nav>
-        <ul class="nav-links">
+        <ul class="nav-links hidden">
           <li><a href="portfolio">portfolio</a></li>
           <li><a href="About">About</a></li>
           <li><a href="Contact">Contact</a></li>
