--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="hamburger-menu">
       <a href="#"><i class="fa fa-bars"></i></a>
     </nav>
-        <ul class="nav-links hidden">
+        <ul class="nav-links hidden right-nav">
           <li><a href="portfolio">portfolio</a></li>
           <li><a href="About">About</a></li>
           <li><a href="Contact">Contact</a></li>
