UPDATE HTML AND CSS FILES

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#"><i class="fa fa-bars"></i></a>
     </nav>
         <ul class="nav-links hidden right-nav">
-          <li><a href="portfolio">portfolio</a></li>
+          <li><a href="portfolio">Portfolio</a></li>
           <li><a href="About">About</a></li>
           <li><a href="Contact">Contact</a></li>
           <li class="envelope"><i class="fas fa-envelope-square"></i></li>
