FIX BUGS IN HTNL AND CSS FILES

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			</div>
 			<ul>
 				<li>
-					<div class="multi-story-1">
+					<div class="multi-story-1 story">
 						<div class="image blank-image">
 							<img
 								class="blank"
@@ -135,7 +135,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="multi-story-2">
+					<div class="multi-story-2 story">
 						<div class="image">
 							<img
 								class="blank"
@@ -164,7 +164,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="multi-story-3">
+					<div class="multi-story-3 story">
 						<div class="image">
 							<img
 								class="blank"
@@ -193,7 +193,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="multi-story-4">
+					<div class="multi-story-4 story">
 						<div class="image">
 							<img
 								class="blank"
@@ -223,7 +223,7 @@
 				</li>
 			</ul>
 		</section>
-		<section class="multi-story-5">
+		<section class="multi-story-5 story">
 			<div class="contact-form multi-story-5">
 				<div class="head-chatbox">
 					<h2 class="hidden-mobile-view">CONTACT US</h2>
