Update Html files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <script src="https://kit.fontawesome.com/dd085802a7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
   <title>Alexander's Project Oasis</title>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FBY2Z0GHY4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FBY2Z0GHY4');
+</script>
 </head>
 
 <body>
