--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
       </div>
       <div class="icon-links">
         <ul class="icon-links">
-          <li><a href="#"><img src="./image/github.png" alt=""></a></li>
+          <li><a href="#"><img src="./image/github.png" alt="github-icon"></a></li>
 
-          <li><a href="#"><img src="./image/Vector.png" alt=""></a></li>
+          <li><a href="#"><img src="./image/Vector.png" alt="vector-icon"></a></li>
 
-          <li><a href="#"><img src="./image/twitter.png" alt=""></a></li>
+          <li><a href="#"><img src="./image/twitter.png" alt="twitter-icon"></a></li>
 
-          <li><a href="#"><img src="./image/angellist.png" alt=""></a></li>
+          <li><a href="#"><img src="./image/angellist.png" alt="angellist-icon"></a></li>
         </ul>
       </div>
       <div class="work-2">
@@ -91,7 +91,7 @@
   </section>
   <section class="multi-post">
     <div class="header work">
-      <h1> MY RECENT WORK</h1>
+      <h2> MY RECENT WORK</h2>
     </div>
     <ul>
       <li>
@@ -100,7 +100,7 @@
             <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
-            <h2>Multi-Post Stories</h2>
+            <h3>Multi-Post Stories</h3>
             <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
               been the
               industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
@@ -123,7 +123,7 @@
             <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
-            <h2>Multi-Post Stories</h2>
+            <h3>Multi-Post Stories</h3>
             <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
               been the
               industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
@@ -146,7 +146,7 @@
             <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
-            <h2>Multi-Post Stories</h2>
+            <h3>Multi-Post Stories</h3>
             <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
               been the
               industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
@@ -169,7 +169,7 @@
             <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
-            <h2>Multi-Post Stories</h2>
+            <h3>Multi-Post Stories</h3>
             <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
               been the
               industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
@@ -233,16 +233,16 @@
   <footer class="footer-bottom">
       <ul class="icons">
         <li><a href="#">
-            <img src="./image/github.png" alt="">
+            <img src="./image/github.png" alt="github-bottom-icon">
           </a></li>
         <li><a href="#">
-            <img src="./image/angellist.png" alt="">
+            <img src="./image/angellist.png" alt="angellist-bottom-icon">
           </a></li>
         <li><a href="#">
-            <img src="./image/twitter.png" alt="">
+            <img src="./image/twitter.png" alt="twitter-bottom-icon">
           </a></li>
         <li><a href="#">
-            <img src="./image/Vector.png" alt="">
+            <img src="./image/Vector.png" alt="vector-bottom-icon">
           </a></li>
         </ul>
         <a href="#" class="email-link">
