--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   gtag('config', 'G-FBY2Z0GHY4');
 </script>
+
 </head>
 
 <body>
@@ -29,16 +30,16 @@
       <a href="#"><i class="fa fa-bars"></i></a>
     </nav>
         <ul class="nav-links hidden right-nav">
-          <li><a href="portfolio">Portfolio</a></li>
-          <li><a href="About">About</a></li>
-          <li><a href="Contact">Contact</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Contact">Contact</a></li>
           <li class="envelope"><i class="fas fa-envelope-square"></i></li>
         </ul>
     </nav>
 
   <section class="first-section mobile-head destop-head">
     <div class="header">
-      <h1>Alex Odufuye</h1>
+      <h1 id="About">Alex Odufuye</h1>
       <h2 class="head-text">Software Developer</h2>
     </div>
     <div class="intro">
@@ -75,7 +76,7 @@
       </div>
       <div class="icon-links">
         <ul class="icon-links">
-          <li><a href="#"><img src="./image/github.png" alt="github-icon"></a></li>
+          <li><a href="portfolio"><img src="./image/github.png" alt="github-icon"></a></li>
 
           <li><a href="#"><img src="./image/Vector.png" alt="vector-icon"></a></li>
 
@@ -91,13 +92,13 @@
   </section>
   <section class="multi-post">
     <div class="header work">
-      <h2> MY RECENT WORK</h2>
+      <h2 id="portfolio"> MY RECENT WORK</h2>
     </div>
     <ul>
       <li>
         <div class="multi-story-1">
           <div class="image blank-image">
-            <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
+            <img class="blank portfolio" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
             <h3>Multi-Post Stories</h3>
@@ -113,7 +114,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="submit"> See Project</button>
+            <button type="button">Read Message</button>
           </div>
         </div>
       </li>
@@ -136,7 +137,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="submit"> See Project</button>
+            <button type="button">Read Message</button>
           </div>
         </div>
       </li>
@@ -159,7 +160,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="submit"> See Project</button>
+            <button type="button"> Read Message</button>
           </div>
         </div>
       </li>
@@ -182,7 +183,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="submit"> See Project</button>
+            <button type="button">Read Message</button>
           </div>
         </div>
       </li>
@@ -191,9 +192,9 @@
   <section class="multi-story-5">
     <div class="contact-form multi-story-5">
       <div class="head-chatbox">
-        <h2 class="hidden-mobile-view">CONTACT US</h2>
+        <h2 class="hidden-mobile-view" >CONTACT US</h2>
 
-        <h2 class="hidden-destop-view chatbox">Let's Chat!</h2>
+        <h3 class="hidden-destop-view chatbox" id="Contact">Let's Chat!</h3>
 
         <p class="text">If you have an application you are interested in developing, a feature that you need built or a
           project
@@ -224,7 +225,7 @@
               required></textarea>
           </div>
           <div class="button">
-            <button type="submit">See Project</button>
+            <button type="submit" value="Submit"> Send Message </button>
           </div>
         </form>
       </div>
@@ -245,7 +246,7 @@
             <img src="./image/Vector.png" alt="vector-bottom-icon">
           </a></li>
         </ul>
-        <a href="#" class="email-link">
+        <a href="Contact" class="email-link">
           alexandermayowa05@gmail.com
         </a>
   </footer>
