Fix errors in html file

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="button">Read Message</button>
+            <button type="button">see project</button>
           </div>
         </div>
       </li>
@@ -137,7 +137,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="button">Read Message</button>
+            <button type="button">see project</button>
           </div>
         </div>
       </li>
@@ -160,7 +160,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="button"> Read Message</button>
+            <button type="button"> see project</button>
           </div>
         </div>
       </li>
@@ -183,7 +183,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="button">Read Message</button>
+            <button type="button">see project</button>
           </div>
         </div>
       </li>
@@ -225,7 +225,7 @@
               required></textarea>
           </div>
           <div class="button">
-            <button type="submit" value="Submit"> Send Message </button>
+            <button type="submit" value="Submit"> Send Feedbacks</button>
           </div>
         </form>
       </div>
