update html files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://kit.fontawesome.com/dd085802a7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./menu.css">
+  <!-- <link rel="stylesheet" href="./menu.css"> -->
   <title>Alexander's Project Oasis</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBY2Z0GHY4"></script>
