--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <a href="#"><i class="fa fa-bars"></i></a>
     </div>
         <ul class="nav-links hidden right-nav">
-          <li><a href="#portfolio">Portfolio <span><i class="fas fa-chevron-right"></i></span></a></li>
+          <li><a href="#portfolio">Portfolio <span><i class="fas fa-chevron-right first"></i></span></a></li>
           <li><a href="#About" class="about">About<span><i class="fas fa-chevron-right second"></i></span></a></li>
-          <li><a href="#Contact">Contact<span><i class="fas fa-chevron-right"></i></span></a></li>
+          <li><a href="#Contact">Contact<span><i class="fas fa-chevron-right last"></i></span></a></li>
           <li class="envelope"><i class="fas fa-envelope-square"></i></li>
           <li class="close-menu"><i class="fas fa-times"></i></li>
         </ul>
