--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <li class="ruby"> ruby </li>
               </ul>
             </div>
-            <button type="button">see project</button>
+            <button type="button" >see project</button>
           </div>
         </div>
       </li>
@@ -203,21 +203,24 @@
       </div>
 
       <div class="form">
-        <form action="https://formspree.io/f/mwkabepk" method="POST">
+        <form action="https://formspree.io/f/mwkabepk" method="POST" id="subscribe">
           <div class="name">
-            <input type="text" name="name" class="name" placeholder="input name" maxlength="30" minlength="4" required>
+            <input type="text" name="firstname" class="name" placeholder="input name" maxlength="30" minlength="4" required>
           </div>
 
           <div class="input-name hidden">
             <div class="first-name">
-              <input type="text" name="name" class="Name" placeholder="First Name" maxlength="30" minlength="4"
+              <small></small>
+              <input type="text" name="firstname" class="Name" placeholder="First Name" maxlength="30" minlength="4"
                 required>
             </div>
             <div class="second-name">
-              <input type="text" name="name" class="Name" placeholder="Last Name" maxlength="30" minlength="4" required>
+              <small></small>
+              <input type="text" name="secondname" class="Name" placeholder="Last Name" maxlength="30" minlength="4" required>
             </div>
           </div>
           <div class="email">
+            <small></small>
             <input type="email" name="replyto" class="Email" placeholder="nothing@yourmail.com" required>
           </div>
 
@@ -226,7 +229,7 @@
               required></textarea>
           </div>
           <div class="button">
-            <button type="submit" value="Submit"> Send Feedbacks</button>
+            <button type="submit"> subscribe </button>
           </div>
         </form>
       </div>
@@ -251,8 +254,7 @@
           alexandermayowa05@gmail.com
         </a>
   </footer>
-  <script src="./app.js">
-
-  </script>
+  <script src="./app.js"></script>
+  <script src="./form.js"></script>
 </body>
 </html>
