Fix bugs in html files

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
   <section class="first-section mobile-head destop-head">
     <div class="header">
-      <h1 id="About">Alex Odufuye</h1>
+      <h1>Alex Odufuye</h1>
       <h2 class="head-text">Software Developer</h2>
     </div>
-    <div class="intro">
+    <div  id="About" class="intro">
       <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work and
         experience! If you like what you see and have a project you need coded, don’t hestiate to contact me..</p>
     </div>
@@ -93,7 +93,7 @@
   </section>
   <section class="multi-post">
     <div class="header work">
-      <h2 id="portfolio"> MY RECENT WORK</h2>
+      <h2> MY RECENT WORK</h2>
     </div>
     <ul>
       <li>
@@ -102,7 +102,7 @@
             <img class="blank portfolio" src="./image/blank-img.png" alt="image-placeholder">
           </div>
           <div class="destop-split">
-            <h3>Multi-Post Stories</h3>
+            <h3 id="portfolio">Multi-Post Stories</h3>
             <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
               been the
               industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
@@ -193,9 +193,9 @@
   <section class="multi-story-5">
     <div class="contact-form multi-story-5">
       <div class="head-chatbox">
-        <h2 class="hidden-mobile-view" >CONTACT US</h2>
+        <h2  id="Contact" class="hidden-mobile-view" >CONTACT US</h2>
 
-        <h3 class="hidden-destop-view chatbox" id="Contact">Let's Chat!</h3>
+        <h3 class="hidden-destop-view chatbox">Let's Chat!</h3>
 
         <p class="text">If you have an application you are interested in developing, a feature that you need built or a
           project
