fix bugs in html file

--- a/index.html
+++ b/index.html
@@ -202,9 +202,10 @@
 
       <div class="form">
         <form  method="POST" id="subscribe">
-          <!-- <div class="name">
-            <input type="text" name="firstname" id="firstname" class="name" placeholder="input name" maxlength="30" minlength="4" required>
-          </div> -->
+          <div class="fullname">
+            <small class="fullname-message error"></small>
+            <input type="text" name="fullname" id="fullname" class="name" placeholder="input name" maxlength="30" minlength="4">
+          </div>
 
           <div class="input-name hidden">
             <div class="first-name">
