Update html file to host validations

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
             <textarea name="message" id="comment" maxlength="500" class="message" cols="46" rows="12" placeholder="Enter Your Text"></textarea>
           </div>
           <div class="button">
-
             <button type="submit" id="submit"> subscribe </button>
+            <small class="email-message error"></small>
           </div>
         </form>
       </div>
