--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body >
   <nav class="destop-version">
       <a href="#" class="my-logo">Alexander</a>
     <div class="open-menu">
@@ -91,102 +91,12 @@
       </div>
     </div>
   </section>
-  <section class="multi-post">
+  <section class="multi-post blur">
     <div class="header work">
       <h2 id="portfolio"> MY RECENT WORK</h2>
     </div>
     <ul>
-      <li>
-        <div class="multi-story-1">
-          <div class="image blank-image">
-            <img class="blank portfolio" src="./image/blank-img.png" alt="image-placeholder">
-          </div>
-          <div class="destop-split">
-            <h3>Multi-Post Stories</h3>
-            <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-            </p>
-            <div class="list list-align">
-              <ul>
-                <li class="css">css</li>
-                <li class="html">html</li>
-                <li class="bootstrap">bootstrap</li>
-                <li class="ruby"> ruby </li>
-              </ul>
-            </div>
-            <button type="submit" class="view openBtn btnBtn" >see project</button>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="multi-story-2">
-          <div class="image">
-            <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
-          </div>
-          <div class="destop-split">
-            <h3>Multi-Post Stories</h3>
-            <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-            </p>
-            <div class="list list-align">
-              <ul>
-                <li class="css">css</li>
-                <li class="html">html</li>
-                <li class="bootstrap">bootstrap</li>
-                <li class="ruby"> ruby </li>
-              </ul>
-            </div>
-            <button type="submit" class="view openBtn btnBtn">see project</button>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="multi-story-3">
-          <div class="image">
-            <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
-          </div>
-          <div class="destop-split">
-            <h3>Multi-Post Stories</h3>
-            <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-            </p>
-            <div class="list list-align">
-              <ul>
-                <li class="css">css</li>
-                <li class="html">html</li>
-                <li class="bootstrap">bootstrap</li>
-                <li class="ruby"> ruby </li>
-              </ul>
-            </div>
-            <button type="submit" class="view openBtn btnBtn"> see project</button>
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="multi-story-4">
-          <div class="image">
-            <img class="blank" src="./image/blank-img.png" alt="image-placeholder">
-          </div>
-          <div class="destop-split">
-            <h3>Multi-Post Stories</h3>
-            <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-            </p>
-            <div class="list list-align">
-              <ul>
-                <li class="css">css</li>
-                <li class="html">html</li>
-                <li class="bootstrap">bootstrap</li>
-                <li class="ruby"> ruby </li>
-              </ul>
-            </div>
-            <button type="submit" class="view openBtn btnBtn">see project</button>
-          </div>
-        </div>
-      </li>
+      
     </ul>
   </section>
 
@@ -215,8 +125,7 @@
 
           <div class="input-name hidden">
             <div class="first-name">
-              <input type="text" name="name" class="Name" placeholder="First Name" maxlength="30" minlength="4"
-                required>
+              <input type="text" name="name" class="Name" placeholder="First Name" maxlength="30" minlength="4">
             </div>
             <div class="second-name">
               <input type="text" name="name" class="Name" placeholder="Last Name" maxlength="30" minlength="4">
