--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <li>Netlify</li>
               <li>Remote Pair-Programming</li>
               <li>Teamwork</li>
-              <li>Bibucket</li>
+              <li>Bitbucket</li>
               <li>Dev Tools</li>
             </ul>
           </div>
@@ -194,7 +194,7 @@
     <footer class="aboutContact">
       <div class="formResponsive">
         <p>
-          I'm always ineterested in hearing about new projects, so if you'd like
+          I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
         </p>
         <form
