--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section>
       <section class="headline col-12" id="portfolio">
         <hgroup class="section-heading">
-          <h1>Hey there. I'm Rida Arif</h1>
+          <h1>Hey there. I'm Alexander Odufuye</h1>
           <h2>
             <span>A</span>
             <span>Full-stack</span>
