--- a/index.html
+++ b/index.html
@@ -88,22 +88,17 @@
                 ></a>
               </li>
               <li>
-                <a href="https://angel.co/u/rida-arif"
+                <a href="https://angel.co/u/alexander-odufuye"
                   ><span class="fa fa-angellist"></span
                 ></a>
               </li>
               <li>
-                <a href="https://medium.com/@ridaarif16"
-                  ><span class="fa fa-medium"></span
-                ></a>
-              </li>
-              <li>
-                <a href="https://github.com/ridaarif98"
+                <a href="https://github.com/alexander16106"
                   ><span class="fa fa-github"></span
                 ></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/rida-arif/"
+                <a href="https://www.linkedin.com/in/codingrex/"
                   ><span class="fa fa-linkedin"></span
                 ></a>
               </li>
