--- a/index.html
+++ b/index.html
@@ -78,17 +78,12 @@
             Enjoy creating things that live on the Internet. 
             I build websites with a focus on responsive design and accessibility.
             I like to provide solutions for people's projects and businesses that are challenging.
-            A passionate person who works hard to pursue her dreams and is results-oriented. 
+            A passionate person who works hard to pursue his dreams and is results-oriented. 
           </p>
           <div class="icon-link">
             <ul>
               <li>
-                <a href="https://twitter.com/Rida29984906"
-                  ><span class="fa fa-twitter"></span
-                ></a>
-              </li>
-              <li>
-                <a href="https://angel.co/u/alexander-odufuye"
+                <a href="https://angel.co/u/codingrex"
                   ><span class="fa fa-angellist"></span
                 ></a>
               </li>
@@ -231,28 +226,23 @@
             ></a>
           </li>
           <li>
-            <a href="https://angel.co/u/rida-arif"
+            <a href="https://angel.co/u/codingrex"
               ><span class="fa fa-angellist"></span
             ></a>
           </li>
           <li>
-            <a href="https://medium.com/@ridaarif16"
-              ><span class="fa fa-medium"></span
-            ></a>
-          </li>
-          <li>
-            <a href="https://github.com/ridaarif98"
+            <a href="https://github.com/alexander16108"
               ><span class="fa fa-github"></span
             ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/rida-arif/"
+            <a href="https://www.linkedin.com/in/codingrex/"
               ><span class="fa fa-linkedin"></span
             ></a>
           </li>
         </ul>
       </div>
-      <div class="email-link"><p>ridaarif16@gmail.com</p></div>
+      <div class="email-link"><p>alexandermayowa05@gmail.com</p></div>
       <hr class="footerHr" />
     </footer>
     <script src="./script/storage.js"></script>
