--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="icon-link icon-bg">
         <ul>
           <li>
-            <a href="https://twitter.com/Rida29984906"
+            <a href="https://twitter.com/alexander-mayowa"
               ><span class="fa fa-twitter"></span
             ></a>
           </li>
