--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 ></a>
               </li>
               <li>
-                <a href="https://github.com/alexander16106"
+                <a href="https://github.com/alexander16108"
                   ><span class="fa fa-github"></span
                 ></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/codingrex/"
+                <a href="https://www.linkedin.com/in/coderrex/"
                   ><span class="fa fa-linkedin"></span
                 ></a>
               </li>
@@ -114,9 +114,8 @@
     <section class="aboutMe" id="AboutME">
       <h1>About me</h1>
       <p>
-        I can build websites using HTML, CSS, JavaScript, React, Redux, Ruby on Rails, and other frameworks and libraries. 
-        I spend most days learning and building up, either starting it from scratch or adding some customized features and functionality for outdated websites to make them shine again. 
-        I can help you build the product and featured websites. 
+        Hello! My name is Alexander, I'm a full-stack software developer. I know how to work remotely and collaboratively because of the experience I have gained while learning to code at Microverse, a remote software development school that uses pair programming and real-world projects to teach. Before transitioning into software development I worked as a Basic Science and English Teacher and a retail Salesworker for my mother's business for several years. The type of work was different from development, I also learned several of the skills I now use every day as a developer: hardworking, problem-solving, good communication, multi-tasking, and more. I've spent the last several months working remotely and asynchronously with people across five different time zones. I've created useful and good-looking projects, adaptable to many devices, making sure always to have a clean code and optimize it as much as possible.
+ 
         If you like my work and have a project, don't hesitate to contact me.
       </p>
       <div class="See-btn">
@@ -187,6 +186,7 @@
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
         </p>
+        <p>My social media links are down below</p>
         <form
           action="https://formspree.io/f/mvodrqbw"
           method="POST"
@@ -221,11 +221,6 @@
       <div class="icon-link icon-bg">
         <ul>
           <li>
-            <a href="https://twitter.com/alexander-mayowa"
-              ><span class="fa fa-twitter"></span
-            ></a>
-          </li>
-          <li>
             <a href="https://angel.co/u/codingrex"
               ><span class="fa fa-angellist"></span
             ></a>
@@ -236,7 +231,7 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/codingrex/"
+            <a href="https://www.linkedin.com/in/coderrex/"
               ><span class="fa fa-linkedin"></span
             ></a>
           </li>
