--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <nav class="nav-bar">
         <ul class="nav-bar-list">
           <li><a class="menuLink" href="#portfolio">Portfolio</a></li>
-          <li><a class="menuLink" href="#AboutME">About</a></li>
-          <li><a class="menuLink" href="#contact">Contact</a></li>
+          <li><a class="menuLink" href="#aboutMe">About</a></li>
+          <li><a class="menuLink" href="#Contact">Contact</a></li>
         </ul>
 
         <i class="ham">
@@ -111,7 +111,7 @@
 
     <section class="mobilePopup" id="firstPopup"></section>
 
-    <section class="aboutMe" id="AboutME">
+    <section class="aboutMe" id="aboutMe">
       <h1>About me</h1>
       <p>
         Hello! My name is Alexander, I'm a full-stack software developer. I know how to work remotely and collaboratively because of the experience I have gained while learning to code at Microverse, a remote software development school that uses pair programming and real-world projects to teach. Before transitioning into software development I worked as a Basic Science and English Teacher and a retail Salesworker for my mother's business for several years. The type of work was different from development, I also learned several of the skills I now use every day as a developer: hardworking, problem-solving, good communication, multi-tasking, and more. I've spent the last several months working remotely and asynchronously with people across five different time zones. I've created useful and good-looking projects, adaptable to many devices, making sure always to have a clean code and optimize it as much as possible.
@@ -185,13 +185,14 @@
         <p>
           I'm always interested in hearing about new projects, so if you'd like
           to chat please get in touch.
+
+          <span>My social media links are down below</span>
         </p>
-        <p>My social media links are down below</p>
         <form
           action="https://formspree.io/f/mvodrqbw"
           method="POST"
           class="contactForm"
-          id="contact"
+          id="Contact"
         >
           <input
             type="text"
