--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@
       <div class="formResponsive">
         <p>
           I'm always interested in hearing about new projects, so if you'd like
-          to chat please get in touch.
-
-          <span>My social media links are down below</span>
+          to chat please get in touch. My social media links are down below
         </p>
         <form
           action="https://formspree.io/f/mvodrqbw"
