--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       </ul>
     </section>
     <footer class="aboutContact">
+      <h1>About me</h1>
       <div class="formResponsive">
         <p>
           I'm always interested in hearing about new projects, so if you'd like
