--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </ul>
     </section>
     <footer class="aboutContact">
-      <h1>About me</h1>
+      <h1 id="Contact">Contact Me</h1>
       <div class="formResponsive">
         <p>
           I'm always interested in hearing about new projects, so if you'd like
@@ -191,7 +191,6 @@
           action="https://formspree.io/f/mvodrqbw"
           method="POST"
           class="contactForm"
-          id="Contact"
         >
           <input
             type="text"
