--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </nav>
     </header>
     <section>
-      <section class="headline col-12" id="portfolio">
+      <section class="headline col-12">
         <hgroup class="section-heading">
           <h1>Hey there. I'm Alexander Odufuye</h1>
           <h2>
@@ -103,7 +103,7 @@
         </div>
       </section>
     </section>
-    <section class="Work">
+    <section class="Work" id="portfolio">
       <h1>My Recent Works</h1>
       <hr />
       <ul class="grid-items" id="dynamicWork"></ul>
