--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
               </li>
             </ul>
           </div>
-          <i class="fa fa-chevron-circle-down"></i>
+          <a class="menuLink" href="#footer"><i class="fa fa-chevron-circle-down"></i></a>
+          
         </div>
       </section>
     </section>
@@ -180,7 +181,7 @@
         </li>
       </ul>
     </section>
-    <footer class="aboutContact">
+    <footer class="aboutContact" id="footer">
       <h1 id="Contact">Contact Me</h1>
       <div class="formResponsive">
         <p>
