--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
           <div class="icon-link">
             <ul>
               <li>
-                <a href="https://angel.co/u/codingrex"
+                <a target="_blank" href="https://angel.co/u/codingrex"
                   ><span class="fa fa-angellist"></span
                 ></a>
               </li>
               <li>
-                <a href="https://github.com/alexander16108"
+                <a target="_blank" href="https://github.com/alexander16108"
                   ><span class="fa fa-github"></span
                 ></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/coderrex/"
+                <a target="_blank" href="https://www.linkedin.com/in/coderrex/"
                   ><span class="fa fa-linkedin"></span
                 ></a>
               </li>
@@ -221,17 +221,17 @@
       <div class="icon-link icon-bg">
         <ul>
           <li>
-            <a href="https://angel.co/u/codingrex"
+            <a target="_blank" href="https://angel.co/u/codingrex"
               ><span class="fa fa-angellist"></span
             ></a>
           </li>
           <li>
-            <a href="https://github.com/alexander16108"
+            <a target="_blank" href="https://github.com/alexander16108"
               ><span class="fa fa-github"></span
             ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/coderrex/"
+            <a target="_blank" href="https://www.linkedin.com/in/coderrex/"
               ><span class="fa fa-linkedin"></span
             ></a>
           </li>
